--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\SplineMesh\Scripts\Utils\CameraUtility.cs" />
      <Compile Include="Assets\SplineMesh\Scripts\Bezier\CurveSample.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\FinishLine.cs" />
      <Compile Include="Assets\Scripts\Axe.cs" />
      <Compile Include="Assets\SplineMesh\Scripts\Bezier\SplineSmoother.cs" />
      <Compile Include="Assets\SplineMesh\Scripts\MeshProcessing\SplineExtrusion.cs" />
@@ -68,7 +69,7 @@
      <Compile Include="Assets\Scripts\MovementCollider.cs" />
      <Compile Include="Assets\SplineMesh\Scripts\Example\ExampleTentacle.cs" />
      <Compile Include="Assets\Scripts\CoinMovement.cs" />
-     <Compile Include="Assets\Scripts\FinishLine.cs" />
+     <Compile Include="Assets\Scripts\Stairs.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
